fixed comments for the code

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 			</thead>
 
 			<tbody>
-			<!-- You can acccess model attributes which are added in a Controller(EmployeeController.java) with ${attributeName}.
+			<!-- You can access model attributes which are added in a Controller(EmployeeController.java) with ${attributeName}.
 				 In this case, it is "${listEmployees}".
 			     To show all employees data in this table, you need to use "th:each" in the thymeleaf template and iterate the employee of listEmployees -->
 				<tr th:each="employee: ${listEmployees}">
