--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,16 +15,19 @@
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 
 
-	<h3>Employee List</h3>
+	<h3>Persons</h3>
 	<!-- The link which sends GET request to "/showNewEmployeeForm"  -->
 	<a th:href="@{/showNewEmployeeForm}"
-		class="waves-effect waves-light btn">Add new employee</a>
+		class="waves-effect waves-light btn">Add new person</a>
+	<a th:href="@{/create}"
+		class="waves-effect waves-light btn">Create new data</a>
 	<div align="center" style="margin-top: 20px">
 		<table class="responsive-table striped highlight centered">
 			<thead>
 				<tr>
 					<th>First Name</th>
 					<th>Last Name</th>
+					<th>Age</th>
 					<th>Email</th>
 					<th>Actions</th>
 				</tr>
@@ -37,7 +40,14 @@
 				<tr th:each="employee: ${listEmployees}">
 					<td th:text="${employee.firstName}"></td>
 					<td th:text="${employee.lastName}"></td>
-					<td th:text="${employee.email}"></td>
+					<td th:text="${employee.age}"></td>
+					<!--<td th:text="${employee.email}"></td>-->
+					<td>
+						<a
+							th:href="'mailto:' + ${employee.email}"
+							th:text="${employee.email}">
+						</a>
+					</td>
 					<td>
 						<!-- The link which sends GET request to "/showFormForUpdate/{id}" (id is employee.id) -->
 						<a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}"
